--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,5 @@
 language: go
 go:
-  - 1.3
-  - 1.3.1
-  - 1.3.2
-  - 1.3.3
-  - 1.4
-  - 1.4.1
-  - 1.4.2
-  - 1.4.3
-  - 1.5
-  - 1.5.1
-  - 1.5.2
-  - tip
+- 1.5.2
+- tip
+script: make test
