--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
 language: go
 go:
-  - 1.3
-  - 1.3.1
-  - 1.3.2
-  - 1.3.3
-  - 1.4
-  - 1.4.1
-  - 1.4.2
-  - 1.4.3
-  - 1.5
-  - 1.5.1
-  - 1.5.2
-  - tip
+- 1.5.2
+env:
+- PATH=/home/travis/gopath/bin:$PATH
+before_install:
+- go get github.com/mitchellh/gox
+- go get github.com/tcnksm/ghr
+- go get github.com/axw/gocov/gocov
+- go get github.com/mattn/goveralls
+- go get golang.org/x/tools/cmd/cover
+script:
+- go test -v -covermode=count -coverprofile=coverage.out ./...
+- goveralls -coverprofile=coverage.out -service travis-ci -repotoken $COVERALLS_TOKEN
+after_success:
+- gox -output "dist/{{.OS}}_{{.Arch}}_{{.Dir}}"
+- ghr --username hfm --token $GITHUB_TOKEN --replace --prerelease --debug pre-release dist/
