--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env: PATH=/home/travis/gopath/bin:$PATH
 install: go get github.com/mitchellh/gox
 script: make test
 after_success:
+- echo "packaging by ${TRAVIS_GO_VERSION}"
 - make package
 before_deploy:
 - export RELEASE_PKG_FILES=$(ls pkg/dist/*)
@@ -19,5 +20,5 @@ deploy:
   on:
     repo: hfm/mackerel-plugin-mogilefs
     branch: master
-    condition: "$TRAVIS_GO_VERSION = go1.5.2"
+    condition: $TRAVIS_GO_VERSION = 1.5.2
   tags: true
